--- a/css/Tallerdeconcreto.css
+++ b/css/Tallerdeconcreto.css
@@ -19,9 +19,67 @@
 
 *{box-sizing: border-box ;}
 
-body{background-color:rgb(255,250,237);}
+body{background-color:rgb(255,250,237);
+    margin: 0;
+    padding: 0;
 
-.welcome {
-    width: 500px;
+    }
+
+#Title {
+    margin: 0;
+    padding: 0;
+    margin-top: 4%;
+    text-align: center;
+    font-family: titulo;
+    font-size: 50px;
+
+}
+
+#welcome {
+
+    width: 700px;
     height: auto;
+    vertical-align: middle;
+    margin:0;
+    padding:0;
+    
+}
+
+#Welcomeimg {
+    text-align: center;
+    line-height: 80vh;
+}
+
+#nav {
+    background-color: black;
+    width: auto;
+    height: auto;
+    padding:10px 0;
+}
+
+#quote {
+    width: auto;
+    height: auto;
+    padding:0;
+    margin:auto;
+    text-align: center;
+    margin-bottom: 5%;
+
+    font-family: textonormal;
+    font-size: 20px;
+}
+
+#Footer {
+
+    width: auto;
+    height: 200px;
+    padding:0;
+    margin:auto;
+    background-color: rgb(30, 30, 30);
+
+    
+}
+
+.letrafooter {
+    color: white;
 }
