--- a/css/Tallerdeconcreto.css
+++ b/css/Tallerdeconcreto.css
@@ -19,6 +19,8 @@
 
 *{box-sizing: border-box ;}
 
+html{ scroll-behavior: smooth;}
+
 body {
     background-color:rgb(255,250,237);
     margin: 0;
@@ -26,22 +28,38 @@ body {
 
     }
 
-#nav {
+h3 {
+    font-family: titulo;
+}
+
+i{
+    margin-right: 10px;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
+nav {position: sticky;
+    top:0;
     background-color: black;
     width: 100%;
     height: auto;
-    padding:1.5vw 0;
+    padding:2vw 0;
     text-align: center;
     font-family: titulo;
-    margin:0px;
+    margin-bottom: 30px;
+    opacity: 100;
+    z-index: 999;
     
 }
-#nav nav a {
-    text-decoration: none;
+.navtext {
     color: white;
     margin: 0 60px;
     font-size: 1.7vw;
     white-space: nowrap;
+    padding: 0;
 }
 #Title {
     margin: 0;
@@ -49,7 +67,7 @@ body {
     margin-top: 20px;
     text-align: center;
     font-family: titulo;
-    font-size: 60px;
+    font-size: 55px;
 
 }
 
@@ -68,33 +86,44 @@ body {
 }
 
 #quote {
+    position: absolute;
     width: 100%;
     height: auto;
     padding: 10px;
     margin:auto;
+    margin-bottom: 70px;
     text-align: center;
-    margin-bottom: 10px;
-
     font-family: textonormal;
-    font-size: 3vw;
+    font-size: 2vw;
+}
+
+#pixel{
+    position: relative;
+    top: 3.5vw;
+    left: 25vw; 
+    width: 8.5vw; 
+    height: auto; /*si la foto se mueve de sitio es porque todavia no se como hcaer para que no se mueva :/ */
 }
 
 #updatetitle {
     background-color: black;
     color: white;
     padding: 1.5vw;
-    margin: 2vw;
+    margin: 10vw;
     text-align: center;
     font-family: titulo;
+    margin-top: 30px;
     margin-bottom: 0;
     border-radius: 20px 20px 0 0;}
 
 
 #updatebox {
     background-color: white;
-    margin: 2vw;
-    padding: 2vw;
+    margin: 10vw;
+    padding: 1.5vw;
     text-align: center;
+    text-justify: inter-word;
+    line-height: 3vw;
     font-family: textonormal;
     margin-bottom: 40px;
     margin-top: 0;
@@ -102,59 +131,70 @@ body {
     
 }
 
-#Footer {
-
+footer {
+    display: grid;
+    grid-template-columns: 15vw 13vw 10vw;
+    justify-content: center;
     width: 100%;
     height: auto;
-    padding: 1vw 0;
+    padding: 10px ;
     margin:auto;
     background-color: rgb(30, 30, 30);
-    color: white
-
-    
+    color: white;    
+    font-family: textonormal;
+    font-size: 1vw;
 }
 
 @media only screen and (max-width: 768px) {
-    #nav{
+    nav{
         flex-wrap: nowrap;
         overflow: auto;
         justify-content: flex-start;
+        padding: 3vw;
     }
 
-    #nav nav a {
-        margin: 10px 10px;
-        font-size: 3vw;
+    a {
+        margin: 10px;
+        font-size: 3.5vw;
     }
 
     #Title {
-        margin-top: 20px;;
-        font-size: 50px;
+        margin-top: 30px;
+        font-size: 4vh;
     }
 
     #welcome {
         width: 90%;
         margin-bottom: 20px;
-        margin-top: 20px;
+        margin-top: 30px;
     }
 
     #quote {
-        font-size: 20px;
-        margin-top: auto;
-
+        position: absolute;
+        font-size: 15px;
+        padding: 10px;
+        
     }
-    
-    #updatebox {
-            margin: 1vw;
-            padding: 1vw;
-        }
+
+    #pixel {
+        position: relative;
+        width: 9vw;
+    }
     
     #updatetitle{
-        margin: 1vw;
-        padding: 1vw;
+        padding: 3vw;
+        font-size: 4vw;
     }
 
-    #Footer {
-            margin-top: 3vw;
+    #updatebox{
+        text-justify: auto;
+        text-align: center;
+        line-height: 4vw;
     }
     
+    footer {
+        grid-template-columns: 1fr;
+        font-size: 2.5vw;
+        
+    }
 }
