--- a/css/Tallerdeconcreto.css
+++ b/css/Tallerdeconcreto.css
@@ -25,10 +25,14 @@ body {
     background-color:rgb(255,250,237);
     margin: 0;
     padding: 0;
-
+    transition: all 300ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
     }
 
 h3 {
+    font-family: titulo;
+}
+
+h4 {
     font-family: titulo;
 }
 
@@ -36,47 +40,89 @@ i{
     margin-right: 10px;
 }
 
+header {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    position:sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color:  rgb(255,250,237);
+    height: 5rem;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
 a{
     text-decoration: none;
     color: white;
 }
 
-nav {position: sticky;
-    top:0;
-    background-color: black;
-    width: 100%;
-    height: auto;
-    padding:2vw 0;
-    text-align: center;
+#boton{
+    text-align: left;
+}
+
+button{
+    text-decoration: none;
+    color: black;
+    border: 0 solid;
+    cursor: pointer;
+    font-family: textonormal;
+    font-size: 1.25rem;
+    font-weight: bold;
+    background-color: transparent;
+}
+
+.titulo{
+    color:black;
     font-family: titulo;
-    margin-bottom: 30px;
-    opacity: 100;
-    z-index: 999;
+    cursor: pointer;
+    justify-content: center;
+    font-size: 4.5vw;
+}
+
+.menu{
+    width: 0px;
+    height: 100%;
+    align-content: center;
+    justify-content: center;
+    transform: translateX(10px);
+    position:fixed;
+    left: 0;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    transition: all 300ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+    z-index: 300;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    list-style: none;
+    color: black;
+    font-family: textonormal;
+    font-weight: bold;
     
 }
-.navtext {
-    color: white;
-    margin: 0 60px;
-    font-size: 1.7vw;
-    white-space: nowrap;
-    padding: 0;
-}
-#Title {
-    margin: 0;
-    padding: 0;
-    margin-top: 20px;
-    text-align: center;
-    font-family: titulo;
-    font-size: 55px;
 
+.nav_options{
+    color: black;
+    padding: 10%;
+    line-height: 50px;
+}
+
+.menu::-webkit-scrollbar{
+    display: none;
+}
+
+.nav_option{
+    position: absolute;
+    
 }
 
 #welcome {
-    max-width: 100%;
-    height: auto;
     vertical-align: middle;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 5%;
     padding:0;
     object-fit: cover;
 }
@@ -86,12 +132,9 @@ nav {position: sticky;
 }
 
 #quote {
-    position: absolute;
     width: 100%;
     height: auto;
-    padding: 10px;
     margin:auto;
-    margin-bottom: 70px;
     text-align: center;
     font-family: textonormal;
     font-size: 2vw;
@@ -99,21 +142,23 @@ nav {position: sticky;
 
 #pixel{
     position: relative;
-    top: 3.5vw;
     left: 25vw; 
-    width: 8.5vw; 
+    width: 7vw; 
+    top: 5px;
     height: auto; /*si la foto se mueve de sitio es porque todavia no se como hcaer para que no se mueva :/ */
 }
 
 #updatetitle {
+    position: relative;
     background-color: black;
     color: white;
     padding: 1.5vw;
-    margin: 10vw;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    margin-top: 0;
+    margin-bottom: 0;
     text-align: center;
     font-family: titulo;
-    margin-top: 30px;
-    margin-bottom: 0;
     border-radius: 20px 20px 0 0;}
 
 
@@ -145,34 +190,79 @@ footer {
     font-size: 1vw;
 }
 
-@media only screen and (max-width: 768px) {
-    nav{
-        flex-wrap: nowrap;
-        overflow: auto;
-        justify-content: flex-start;
-        padding: 3vw;
+p{
+    font-family: textonormal;
+}
+/* clases para js*/
+.body_move{
+    margin-left: 100px;
+    transition: margin-left 300ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+}
+
+.menu__side_move{
+    width: 100px;
+}
+
+
+.slider-frame {
+	width: 25%;
+    height: auto;
+	margin:50px auto 0;
+	overflow: hidden;
+}
+
+.slider-frame ul {
+	display: flex;
+	padding: 0;
+	width: 400%;
+	
+	animation: slide 20s infinite alternate ease-in-out;
+}
+
+.slider-frame li {
+	width: 100%;
+	list-style: none;
+}
+
+.slider-frame img {
+	width: 100%;
+}
+
+@keyframes slide {
+	0% {margin-left: 0;}
+	20% {margin-left: 0;}
+	
+	25% {margin-left: -100%;}
+	45% {margin-left: -100%;}
+	
+	50% {margin-left: -200%;}
+	70% {margin-left: -200%;}
+	
+	75% {margin-left: -300%;}
+	100% {margin-left: -300%;}
+}
+
+@media only screen and (max-width: 1000px) {
+    #btn_open{
+        font-size: 4vw;
     }
 
-    .navtext {
-        margin: 10px;
-        font-size: 3.5vw;
-    }
-
-    #Title {
-        margin-top: 30px;
-        font-size: 4vh;
+    .menu{
+        font-size: 3vw;
     }
 
     #welcome {
-        width: 90%;
+        width: 80%;
         margin-bottom: 20px;
         margin-top: 30px;
     }
 
     #quote {
-        position: absolute;
-        font-size: 15px;
+        font-size: 3.5vw;
         padding: 10px;
+        flex-wrap: nowrap;
+        overflow: auto;
+        justify-content: flex-start;
         
     }
 
@@ -194,7 +284,23 @@ footer {
     
     footer {
         grid-template-columns: 1fr;
-        font-size: 2.5vw;
+        font-size: 1.5vw;
+        width: 100%;
+        height: auto;
         
     }
+    .body_move{
+        margin-left: 120px;
+        
+    }
+
+    .menu__side_move{
+        width: 140px;
+    }
+}
+.slider-frame {
+	width: 360px;
+    height: auto;
+	margin:50px auto 0;
+	overflow: hidden;
 }
