--- a/css/Tallerdeconcreto.css
+++ b/css/Tallerdeconcreto.css
@@ -40,6 +40,12 @@ i{
     margin-right: 10px;
 }
 
+.texto{
+    padding-left: 10%;
+    padding-right: 10%;
+    margin: auto;
+}
+
 header {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
@@ -176,6 +182,38 @@ button{
     
 }
 
+#childhood{
+    display: grid;
+    grid-template-columns: 70% auto;
+    align-items: center;
+}
+#childhood h3{
+    margin-bottom: 0;
+}
+#childhood p{
+    margin: 0 auto;
+    padding-right: 10%;
+}
+#child{
+    width: 50%;
+}
+
+.OF{
+    text-align: center;
+}
+
+#OF{
+    width: 50%;
+}
+
+.moda{
+    text-align: center;
+}
+
+#golf{
+    width: 50%;
+}
+
 footer {
     display: grid;
     grid-template-columns: 15vw 13vw 10vw;
@@ -303,4 +341,7 @@ p{
     height: auto;
 	margin:50px auto 0;
 	overflow: hidden;
+}
+#child{
+    width: 60%;
 }
