--- a/css/Tallerdeconcreto.css
+++ b/css/Tallerdeconcreto.css
@@ -57,6 +57,7 @@ header {
     height: 5rem;
     padding-left: 1.25rem;
     padding-right: 1.25rem;
+    padding-bottom: 1.45rem;
     justify-content: center;
     align-items: center;
     z-index: 999;
@@ -86,7 +87,7 @@ button{
     font-family: titulo;
     cursor: pointer;
     justify-content: center;
-    font-size: 4.5vw;
+    font-size: 4vw;
 }
 
 .menu{
@@ -289,6 +290,7 @@ p{
     height: auto;
 	margin:50px auto 0;
 	overflow: hidden;
+    padding-bottom: 5%;
 }
 
 .slider-frame ul {
